Added rendering for power in Screen.class
Code cleanups